Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignNumberNumber.quorum
class Main
    action Main
        number v = Test()
        if v = 5.0
            output "passed"
        end
    end

    action Test() returns number
        number var = 5.0
        return var
    end
end