Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberNumObj.quorum
class Main
    action Main
        number v = Test()
    end

    action Test() returns number
        Number var
        var:SetValue(5.0)
        return var
    end
end